<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.ocean.ishareeconomy_android.lending.LendingAddFragment"
        >
    <data>
        <variable name="viewModel" type="com.ocean.ishareeconomy_android.viewmodels.AddLendingViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_lending_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/double_margin"
                    android:layout_marginEnd="@dimen/double_margin"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_margin"
                        android:layout_marginBottom="@dimen/half_margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_title_text"
                        android:textAlignment="center"
                        android:textColor="#2F3249"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/type_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/half_margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_type_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <LinearLayout
                        android:id="@+id/type_buttons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:baselineAligned="false"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                        <ImageButton
                                android:id="@+id/tool_button"
                                style="@style/AppTheme.RoundedCornerMaterialButton"
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center|center_horizontal"
                                android:layout_marginStart="@dimen/margin"
                                android:layout_marginEnd="@dimen/margin"
                                android:contentDescription="@string/tool_button_content_desc"
                                android:onClick="@{viewModel::onTypeButtonClicked}"
                                app:srcCompat="@drawable/ic_lendobject_tool_solid" />

                        <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/half_margin"
                                android:text="@string/tool"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <ImageButton
                                android:id="@+id/service_button"
                                style="@style/AppTheme.RoundedCornerMaterialButton"
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/margin"
                                android:layout_marginEnd="@dimen/margin"
                                android:contentDescription="@string/transport_button_content_desc"
                                android:onClick="@{viewModel::onTypeButtonClicked}"
                                app:srcCompat="@drawable/ic_lendobject_service_solid" />

                        <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/half_margin"
                                android:text="@string/service"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <ImageButton
                                android:id="@+id/transportation_button"
                                style="@style/AppTheme.RoundedCornerMaterialButton"
                                android:layout_width="@dimen/icon_size"
                                android:layout_height="@dimen/icon_size"
                                android:layout_gravity="center"
                                android:layout_marginStart="@dimen/margin"
                                android:layout_marginEnd="@dimen/margin"
                                android:contentDescription="@string/service_button_content_desc"
                                android:onClick="@{viewModel::onTypeButtonClicked}"
                                app:srcCompat="@drawable/ic_lendobject_transportation_solid" />

                        <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/half_margin"
                                android:text="@string/transport"
                                android:textAlignment="center"
                                android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                        android:id="@+id/name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_name_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/choose_name_hint"
                        android:inputType="textPersonName"
                        android:shadowColor="@color/colorPrimary"
                        android:text="@={viewModel.name}"
                        android:textColorHighlight="@color/colorAccent" />

                <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/choose_description_text"
                        android:textColor="#2F3249"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                <EditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/choose_description_hint"
                        android:inputType="textPersonName"
                        android:text="@={viewModel.description}"
                        android:textColorHighlight="@color/colorAccent" />

                <Button
                        android:id="@+id/button2"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_marginTop="@dimen/margin"
                        android:enabled="@{viewModel.share}"
                        android:onClick="@{viewModel::onShareBtnClick}"
                        android:padding="@dimen/double_padding"
                        android:text="@string/add_button"
                        android:textSize="18sp"
                        />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>