<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="object"
                type="com.ocean.ishareeconomy_android.viewmodels.LendObjectDetailViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.CardView">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/lend_object_type"
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/user_icon_content_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_user_circle_solid" />

            <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/half_margin"
                    android:layout_marginEnd="@dimen/half_margin"
                    android:gravity="fill"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/lend_object_type"
                    app:layout_constraintEnd_toStartOf="@+id/info_icon"
                    app:layout_constraintStart_toEndOf="@+id/lend_object_type"
                    app:layout_constraintTop_toTopOf="@+id/lend_object_type">

                <TextView
                        android:id="@+id/title_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@{object.owner}"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold"
                        app:autoSizeMinTextSize="@dimen/title_text_size"
                        tools:text="@string/tools_full_name" />

                <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/tools_distance_default" />

            </LinearLayout>

            <ImageView
                    android:id="@+id/info_icon"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:contentDescription="@string/info_icon_content_desc"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_info_solid_24dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>